--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "4.2.0",
-    "simplebar-react": "^2.4.1",
-    "swagger-ui-react": "^4.15.2"
+    "simplebar-react": "^2.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
